antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 1636
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
  Switch between Codex approval presets         
                                                
› 1. Read Only (current)  Antex can read files  
  2. Full Access          Antex can edit files  
                                                
  Press enter to confirm or esc to go back
